samples/_failures_safe/1761339364_f77cb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11985bc3.c: In function ‘main’:
./samples/SAFE/__tmp_11985bc3.c:152:5: error: expected declaration or statement at end of input
  152 |     }
      |     ^
